--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Información de Sexualidad</title>
-    <link rel="stylesheet" href="/templates/css/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <section class="hero">
