--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
         <div class="container">
             <h2>Estadios del Matrimonio</h2>
             <p>La evolución del matrimonio se puede observar desde diferentes perspectivas y autores.</p>
-            <img src="/static/img/Imagen1.png" />
+            <img src="static/img/Imagen1.png" />
         </div>
     </section>
 
@@ -472,7 +472,7 @@
         <div class="container">
             <h2>Esquemas de Jeffrey Young</h2>
             <p>Tenemos que reconocer que las raíces de las discordias interpersonales se asientan en esquemas y estrategias de evitación de estos esquemas. Los esquemas disfuncionales se convierten en bombas retardadas para la relajación formadas en la infancia, pero activadas por amenazas, conflictos y estresores actuales. Generan expectativas negativas sobre uno mismo y los demás y llevan a los miembros de la pareja a evitar el esquema nocivo mediante respuestas de afrontamiento disfuncionales (Mckay & Skeen, 2012).</p>
-            <img class="img" src="/static/img/Imagen3.png">
+            <img class="img" src="static/img/Imagen3.png">
         </div>
     </section>
 
@@ -568,7 +568,7 @@
                     <li>N: Negocia de forma efectiva.</li>
                 </ul>
             </div>
-            <img class="img" src="/static/img/Imagen2.png">
+            <img class="img" src="static/img/Imagen2.png">
         </div>
     </section>
 
