--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <li>Universales e indivisibles.</li>
                 <li>Promueven la justicia social y la dignidad de las personas.</li>
             </ul>
+            <img src="static/img/Imagen5.jpg "class="image-limited" alt="Derechos Sexuales y Reproductivos">
         </div>
     </section>
 
@@ -252,6 +253,7 @@
             <h2>¿Dios los Hace y Ellos se Juntan?</h2>
             <p>Las personas tienden a vivir entre personas que tienen orígenes similares, lo que influye en la atracción, amistad y relaciones amorosas.</p>
         </div>
+        <img src="static/img/Imagen6.jpg" class="image-limited" alt="Dios los hace y ellos se juntan">
     </section>
 
     <section id="reciprocidad" class="section alternate">
@@ -310,14 +312,17 @@
     <section id="tipos-amor" class="section">
         <div class="container">
             <h2>Tipos de amor</h2>
-            <ul>
-                <li>Amor romántico</li>
-                <li>Amor lúdico.</li>
-                <li>Amistad.</li>
-                <li>Amor razonado.</li>
-                <li>Amor desinteresado.</li>
-                <li>Amor excitante.</li>
-            </ul>
+            <div class="content">
+                <ul>
+                    <li>Amor romántico</li>
+                    <li>Amor lúdico.</li>
+                    <li>Amistad.</li>
+                    <li>Amor razonado.</li>
+                    <li>Amor desinteresado.</li>
+                    <li>Amor excitante.</li>
+                </ul>
+                <img src="static/img/Imagen4.png" alt="Representación de amor" class="list-image">
+            </div>
         </div>
     </section>
 
@@ -335,10 +340,11 @@
         </div>
     </section>
     
-    <section id="soledad" class="section">
+    <section id="dear-man" class="section">
+        <h2>La Soledad</h2>
         <div class="container">
-            <h2>La Soledad</h2>
             <p>La soledad es un estado de aislamiento doloroso o un sentimiento de estar separado de los demás. Factores como la falta de habilidades sociales, empatía, miedo al rechazo, y una alta sensación de control externo pueden contribuir a la soledad.</p>
+        <img src="static/img/Imagen7.jpg" class="img">
         </div>
     </section>
 
