--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section id="reproductiva" class="section alternate">
         <div class="container">
-            <h2>¿Qué es la Reproductiva?</h2>
+            <h2>¿Qué es la Salud Reproductiva?</h2>
             <p>Es el estado general de bienestar físico, mental y social relacionado con el sistema reproductivo, sus funciones y procesos. Implica la capacidad de disfrutar una vida sexual satisfactoria, sin riesgos de procrear.</p>
         </div>
     </section>
@@ -43,7 +43,7 @@
 
     <section id="sexuacion" class="section alternate">
         <div class="container">
-            <h2>Sexuacion</h2>
+            <h2>Sexuación</h2>
             <p>Conjunto de fases biológicas y psicológicas que contribuyen a la caracterización de la sexualidad de los individuos de una especie.</p>
             <ul>
                 <li>Sexuación física: Engloba el sexo genético, biológico y fisiológico.</li>
