--- a/index.html
+++ b/index.html
@@ -547,13 +547,13 @@
             <div class="guion-container">
                 <h2>Modelo DEAR MAN</h2>
                 <ul>
-                    <li>D: Expresa.</li>
-                    <li>E: Expresa de forma asertiva.</li>
-                    <li>A: Refuerza tu posición.</li>
-                    <li>R: Mantén tu posición.</li>
-                    <li>M: Aparece seguro.</li>
-                    <li>A: Negocia.</li>
-                    <li>N: Negocia de forma efectiva.</li>
+                    <li>D: Describir.</li>
+                    <li>E: Expresa.</li>
+                    <li>A: Asertivamente.</li>
+                    <li>R: Reforzar.</li>
+                    <li>M: Mantener posicion.</li>
+                    <li>A: Aparentar seguridad.</li>
+                    <li>N: Negociar.</li>
                 </ul>
             </div>
             <img class="img" src="static/img/Imagen2.png">
