--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <h2>¿Qué es la Sexualidad?</h2>
             <p>La sexualidad es la integración de aspectos emocionales, intelectuales y sociales del ser sexual, promoviendo el desarrollo de la personalidad, la comunicación y el amor.</p>
         </div>
+        <img class="image-limited" src="static/img/Imagen22.jpg">
     </section>
 
     <section id="reproductiva" class="section alternate">
@@ -27,6 +28,7 @@
             <h2>¿Qué es la Salud Reproductiva?</h2>
             <p>Es el estado general de bienestar físico, mental y social relacionado con el sistema reproductivo, sus funciones y procesos. Implica la capacidad de disfrutar una vida sexual satisfactoria, sin riesgos de procrear.</p>
         </div>
+        <img class="image-limited" src="static/img/Imagen21.jpg">
     </section>
 
     <section id="derechos" class="section">
@@ -51,6 +53,7 @@
                 <li>Sexuación objeto: Engloba la orientación sexual y la ejecución de los caracteres relacionados con la libido.</li>
             </ul>
         </div>
+        <img class="image-limited" src="static/img/Imagen23.jpg">
     </section>
 
     <section id="vida-adulta" class="section">
@@ -65,11 +68,12 @@
                 <li>Los derechos humanos sexuales en plenitud.</li>
             </ul>
         </div>
+        <img class="img" src="static/img/Imagen18.jpg">
     </section>
 
-    <section id="anomalias-sexualidad" class="section alternate">
+    <section id="dear-man" class="section alternate">
+        <h2>Anormalidades en la sexualidad</h2>
         <div class="container">
-            <h2>Anormalidades en la sexualidad</h2>
             <ul class="column-list">
                 <li>Eyaculación retardada.</li>
                 <li>Trastorno eréctil.</li>
@@ -90,6 +94,7 @@
                 <li>Travestismo.</li>
                 <li>Parafilia.</li>
             </ul>
+            <img class="image-limited" src="static/img/Imagen1.jpg">
         </div>
     </section>
 
@@ -110,7 +115,7 @@
         </div>
     </section>
 
-    <section id="identidades" class="section alternate">
+    <section id="diversidad" class="section alternate">
         <div class="container">
             <h2>Diversidad, Identidad y Orientación Sexual</h2>
             <div class="grid-container">
@@ -155,7 +160,9 @@
                     </ul>
                 </div>
             </div>
+            <img class="image-limited" src="static/img/Imagen20.jpg">
         </div>
+        <img class="image-limited" src="static/img/Imagen19.jpg">
     </section>
     
     <section id="socializacion-sexual" class="section">
@@ -260,6 +267,7 @@
         <div class="container">
             <h2>Reciprocidad</h2>
             <p>Es un determinante importante de la atracción. Tendemos a ser más cálidos y sinceros con los desconocidos que creemos que son como nosotros.</p>
+            <img src="static/img/Imagen15.jpg">
         </div>
     </section>
 
@@ -286,6 +294,7 @@
                 </div>
             </div>
         </div>
+        <img class="image-limited" src="static/img/Imagen17.jpg">
     </section>
 
     <section id="amor-romantico" class="section alternate">
@@ -397,6 +406,10 @@
             <h2>Intimidad y Autoestima</h2>
             <p>La investigación sugiere que los miembros de la pareja con baja autoestima tienen a albergar sentimientos de poca seguridad en si mismos que pueden interferir en el desarrollo y el mantenimiento de relaciones románticas (Murray & Holmes, 2000).</p>
         </div>
+        <div>
+            <img class="image-limited" src="static/img/Imagen10.jpg">
+            <img src="static/img/Imagen13.jpg">
+        </div>
     </section>
 
     <section id="pareja-equipo" class="section alternate">
@@ -419,12 +432,13 @@
                 </div>
             </div>
         </div>
+        <img class="image-limited" src="static/img/Imagen11.jpg">
     </section>
 
-    <section id="pareja-feliz" class="section">
+    <section id="dear-man" class="section">
+        <h2>La Pareja Feliz</h2>
+        <p>Una pareja feliz se caracteriza por:</p>
         <div class="container">
-            <h2>La Pareja Feliz</h2>
-            <p>Una pareja feliz se caracteriza por:</p>
             <ul class="column-list">
                 <li>Demostrar admiración mutua.</li>
                 <li>Ser cómplices.</li>
@@ -437,6 +451,7 @@
                 <li>Pedir perdón sinceramente.</li>
                 <li>Adaptarse a los cambios.</li>
             </ul>
+            <img class="img" src="static/img/Imagen14.jpg">
         </div>
     </section>
 
@@ -479,6 +494,13 @@
             <h2>Esquemas de Jeffrey Young</h2>
             <p>Tenemos que reconocer que las raíces de las discordias interpersonales se asientan en esquemas y estrategias de evitación de estos esquemas. Los esquemas disfuncionales se convierten en bombas retardadas para la relajación formadas en la infancia, pero activadas por amenazas, conflictos y estresores actuales. Generan expectativas negativas sobre uno mismo y los demás y llevan a los miembros de la pareja a evitar el esquema nocivo mediante respuestas de afrontamiento disfuncionales (Mckay & Skeen, 2012).</p>
             <img class="img" src="static/img/Imagen3.png">
+        </div>
+    </section>
+
+    <section id="esquemas-jeffrey-young" class="section">
+        <div class="container">
+            <h2>Teoría triangular del amor Sternberg</h2>
+            <img src="static/img/Imagen8.jpg">
         </div>
     </section>
 
@@ -539,6 +561,7 @@
                     <p>La pertinencia y la forma de comunicar el contenido verbal son importantes.</p>
                 </div>
             </div>
+            <img class="image-limited" src="static/img/Imagen9.jpg">
         </div>
     </section>
 
@@ -547,13 +570,13 @@
             <div class="guion-container">
                 <h2>Modelo DEAR MAN</h2>
                 <ul>
-                    <li>D: Describir.</li>
-                    <li>E: Expresa.</li>
-                    <li>A: Asertivamente.</li>
-                    <li>R: Reforzar.</li>
-                    <li>M: Mantener posicion.</li>
-                    <li>A: Aparentar seguridad.</li>
-                    <li>N: Negociar.</li>
+                    <li>D: Expresa.</li>
+                    <li>E: Expresa de forma asertiva.</li>
+                    <li>A: Refuerza tu posición.</li>
+                    <li>R: Mantén tu posición.</li>
+                    <li>M: Aparece seguro.</li>
+                    <li>A: Negocia.</li>
+                    <li>N: Negocia de forma efectiva.</li>
                 </ul>
             </div>
             <img class="img" src="static/img/Imagen2.png">
